--- a/app/style/main.css
+++ b/app/style/main.css
@@ -141,6 +141,62 @@ table.table {
 	}
 
 /**********************************************************************************
+ * Text columns
+ */
+
+.columns {
+	display: table;
+	margin: 1em 0em;
+	padding: 0px;
+	border-collapse: collapse;
+	width: 100%;
+	table-layout: fixed;
+}
+
+.column {
+	display: table-cell;
+	padding: 0.75em 1em 1.25em 1em;
+	border-left: 1px dashed #bbb;
+}
+
+.column:first-child {
+	padding-left: 0px;
+	border-left: none;
+}
+
+.column:last-child {
+	padding-right: 0px;
+}
+
+.column :first-child {
+	margin-top: 0em;
+}
+.column :last-child {
+	margin-bottom: 0em;
+}
+
+.columns + .columns {
+	border-top: 1px dashed #bbb;
+	margin-top: -1em;
+	min-height: 100px;
+}
+
+.columns + .columns .column {
+	padding-top: 1.75em;
+}
+
+.col_1_2 { width: 50.000%; }
+.col_1_3 { width: 33.333%; }
+.col_2_3 { width: 66.666%; }
+.col_1_4 { width: 25.000%; }
+.col_2_4 { width: 50.000%; }
+.col_3_4 { width: 75.000%; }
+.col_1_5 { width: 20.000%; }
+.col_2_5 { width: 40.000%; }
+.col_3_5 { width: 60.000%; }
+.col_4_5 { width: 80.000%; }
+
+/**********************************************************************************
  * Layout
  */
 
@@ -251,6 +307,8 @@ body {
 	bottom: 0px;
 	left: -1px;
 	right: -1px;
+	margin-left: 0px;
+	margin-right: 0px;
 	height: 3em;
 	width: auto;
 
